tests/escript/scripts/escript_invalid_outside_loop.py.out
Error in script: At line 3, SyntaxError: 'continue' not properly in loop
