tests/escript/scripts/escript_invalid_outside_loop.py
# python3;failure
continue  # Invalid outside a loop